# Hardlink-Based-File-Explorer

./: HardlinkManager.spec  Hardlink_Manager_Project_Specification.md  build.py  generate_manual.py  hardlink_manager.spec  pyproject.toml
hardlink_manager/: __init__.py  __main__.py  main.py
hardlink_manager/core/: hardlink_ops.py  mirror_groups.py  search.py  sync.py  watcher.py
hardlink_manager/ui/: app.py  dialogs.py  file_browser.py  mirror_panel.py  search_panel.py
hardlink_manager/utils/: filesystem.py
tests/: test_filesystem.py  test_hardlink_ops.py  test_mirror_groups.py  test_search.py  test_symlinks.py  test_sync.py  test_watcher.py
